feat: Curriculum 수정
- CurriculumCodeJson -> GeneralRequired, MajorRequired, MajorSelect 3개로 나눔
- 교양필수, 교양선택, 전공필수 관련데이터를 하나의 additionalInfo에 관리하면 혼란 예상되어 나눔
- Curriculum 내부 객체 클래스명 변경 (Json 이라는 단어 뺌)
- MongoDB의 특성으로 인해 발생할 수 있는 NullPointException 방지코드 추가

Resolves: #17